# nucane

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
clients/simulator-client/: Cargo.toml
clients/simulator-client/src/: lib.rs
common/eac/: Cargo.toml
common/eac/src/: lib.rs
common/eac/src/bybit/: credential.rs  enums.rs  error.rs  mod.rs  parser.rs
common/eac/src/okx/: credential.rs  error.rs  mod.rs  parser.rs
common/indicators/: Cargo.toml
common/indicators/src/: api.rs  cache.rs  calculation.rs  lib.rs
common/strategy-api/: Cargo.toml
common/strategy-api/src/: api.rs  lib.rs  utils.rs
common/synapse/: Cargo.toml
common/synapse/src/: core.rs  lib.rs  subject.rs
common/synapse/src/api/: mod.rs  subject.rs  test_message_api.rs  test_request_api.rs
common/synapse/src/impls/: mod.rs  nats.rs
common/synapse/src/nats/: core.rs
default-strategies/test/: Cargo.toml
domain-model/: Cargo.toml
eac/: Cargo.toml
eac/src/okx/: enums.rs
engine/: Cargo.toml
engine/adapters/rest-api-server/: Cargo.toml
engine/adapters/rest-api-server/src/: lib.rs  server.rs
engine/adapters/rest-client/: Cargo.toml
engine/adapters/rest-client/src/: client.rs  lib.rs
engine/app/: Cargo.toml  config.yml
engine/app/src/: config.rs  lib.rs  main.rs
engine/config/: Cargo.toml  config.yml
engine/config/src/: lib.rs
engine/core/: Cargo.toml
engine/core/src/: api.rs  executor.rs  fs_state_manager.rs  lib.rs  registry.rs  runtime.rs  service.rs
engine/libs/fs-plugin-state/: Cargo.toml
engine/libs/plugin-internals/: Cargo.toml
engine/libs/plugin-internals/src/: lib.rs
engine/libs/rest-api/src/: dtos.rs  endpoints.rs  lib.rs
engine/ports/core-api/: Cargo.toml
engine/ports/core-api/src/: api.rs
engine/rest-api/: Cargo.toml
engine/rest-api/src/: lib.rs
engine/rest-client/: Cargo.toml
engine/rest-client/src/: lib.rs
engine/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/tests/: simulation_e2e.rs
interactor/: Cargo.toml  config.yml
interactor/adapters/bybit-exchange/: Cargo.toml
interactor/adapters/bybit-exchange/src/: exchange.rs  lib.rs  rounding.rs
interactor/adapters/embedded-persistance/: Cargo.toml
interactor/adapters/embedded-persistance/src/: repositories.rs
interactor/adapters/inmemory-persistence/: Cargo.toml
interactor/adapters/inmemory-persistence/src/: lib.rs  repositories.rs
interactor/adapters/okx-exchange/: Cargo.toml
interactor/adapters/okx-exchange/src/: exchange.rs  lib.rs
interactor/adapters/rest-api-server/: Cargo.toml
interactor/adapters/rest-api-server/src/: server.rs
interactor/adapters/rest-client/: Cargo.toml
interactor/app/: Cargo.toml
interactor/app/src/: lib.rs  main.rs
interactor/config/: Cargo.toml  config.yml
interactor/config/src/: lib.rs
interactor/core/: Cargo.toml
interactor/core/src/: api.rs  lib.rs  subscription_manager.rs
interactor/libs/rest-api/: Cargo.toml
interactor/ports/core-api/: Cargo.toml
interactor/ports/exchange-api/: Cargo.toml
interactor/ports/persistence-api/: Cargo.toml
interactor/rest-api/src/: lib.rs
interactor/rest-client/: Cargo.toml
interactor/rest-client/src/: lib.rs
interactor/src/: lib.rs  main.rs
libs/indicators-api/: Cargo.toml
libs/indicators-api/src/: lib.rs
localdev/: Cargo.toml  config.yml
localdev/mysql/: docker-compose.yml
localdev/src/: config.rs  lib.rs  main.rs
plugins/e2e/: Cargo.toml
plugins/e2e/src/: lib.rs  plugin.rs  strategy.rs
plugins/test/: Cargo.toml
plugins/test/src/: lib.rs
registry/app/: Cargo.toml  config.yml
registry/app/src/: config.rs  lib.rs  main.rs
registry/core/: Cargo.toml
registry/core/src/: api.rs  lib.rs  model.rs  registry.rs  service.rs
registry/rest-client/: Cargo.toml
registry/rest-client/src/: lib.rs
simulator/: Cargo.toml  config.yml
simulator/adapters/postgres-persistence/: Cargo.toml  README.md
simulator/adapters/rest-api-server/: Cargo.toml
simulator/adapters/rest-client/: Cargo.toml
simulator/app/: Cargo.toml
simulator/app/src/: config.rs  lib.rs  main.rs
simulator/config/: Cargo.toml  config.yml
simulator/config/src/: lib.rs
simulator/core/: Cargo.toml
simulator/core/src/: api.rs  file_logger.rs  lib.rs
simulator/ports/core-api/: Cargo.toml
simulator/ports/persistence-api/: Cargo.toml
simulator/rest-api/: Cargo.toml
simulator/rest-api/src/: lib.rs
simulator/rest-client/: Cargo.toml
simulator/rest-client/src/: lib.rs
simulator/src/: lib.rs  main.rs  simulation.rs
standalone/: Cargo.toml  config.yml  docker-compose.localdev.yml
standalone/app/: Cargo.toml
standalone/app/src/: lib.rs  main.rs
standalone/app/tests/: e2e.rs
standalone/config/: Cargo.toml  config.yml
standalone/config/src/: lib.rs
standalone/redpanda/: docker-compose.yml
standalone/src/: config.rs  lib.rs  main.rs
standalone/tests/: e2e.rs  grid.rs  simulation_e2e.rs
storage/: Cargo.toml
storage/adapters/postgres-persistence/: Cargo.toml  README.md
storage/adapters/rest-api-server/: Cargo.toml
storage/adapters/rest-client/: Cargo.toml
storage/app/: Cargo.toml  config.yml
storage/app/src/: config.rs  lib.rs  main.rs
storage/config/: Cargo.toml  config.yml
storage/config/src/: lib.rs
storage/core/: Cargo.toml
storage/core/src/: api.rs  audit.rs  candle.rs  candle_sync.rs  lib.rs  order.rs  position.rs
storage/libs/core-api-cache/: Cargo.toml
storage/libs/rest-api/: Cargo.toml
storage/migration/: Cargo.toml
storage/migration/src/: m20220101_000001_create_tables.rs  main.rs
storage/ports/core-api/: Cargo.toml
storage/ports/persistence-api/: Cargo.toml
storage/rest-api/: Cargo.toml
storage/rest-api/src/: lib.rs
storage/rest-client/: Cargo.toml
storage/rest-client/src/: lib.rs
storage/src/: audit.rs  candle.rs  candle_sync.rs  config.rs  lib.rs  main.rs
storage/src/entities/: candle.rs  mod.rs  position.rs  prelude.rs
strategy-engine/: Cargo.toml  config.yml
strategy-engine/src/: config.rs  executor.rs  lib.rs  main.rs  registry.rs
synapse/: Cargo.toml
(+273 files in other folders)
