[package]
name = "domain-model"
version = "0.1.0"
edition = "2021"

[dependencies]
synapse = { path = "../synapse", optional = true }
serde = { verion = "1.0.162", features = ["derive"] }
chrono = { verion = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
anyhow = "1.0.71"

[features]
synapse = ["dep:synapse"]
