[package]
name = "eac"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
anyhow = "1.0.71"
sha2 = "0.10.6"
hmac = "0.12.1"
chrono = { version = "0.4.24", features = ["serde"] }
base64 = "0.21.0"
once_cell = "1.17.1"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
crossbeam-channel = "0.5.8"

# 3party
lazy_static = "1.4.0"
thiserror = "1.0.40"
serde_urlencoded = "0.7.1"
http = "0.2.9"
ring = "0.16.20"
fehler = "1.0.0"
derive_builder = "0.12.0"
hyper = "0.14.26"
