[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
standalone = { path = "../standalone" }
domain-model = { path = "../libs/domain-model", features = ["synapse"] }
simulator-client = { path = "../clients/simulator-client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
