[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
localdev = { path = "../localdev" }
domain-model = { path = "../domain-model", features = ["synapse"] }
simulator-client = { path = "../clients/simulator-client" }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.11.18", features = ["json"] }
once_cell = "1.17.2"
chrono = "0.4.24"
