[package]
name = "interactor"
version.workspace = true
edition.workspace = true

[dependencies]
domain-model = { path = "../domain-model", features = ["synapse"] }
eac = { path = "../eac" }
synapse = { path = "../synapse" }
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
uuid = { version = "1.3.2", features = ["v4"] }
chrono = "0.4.24"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde-inline-default = "0.1.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
once_cell = "1.17.1"
crossbeam-channel = "0.5.8"
config = { verion = "0.13.3", features = ["yaml"] }
axum = "0.6.18"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tower = "0.4.13"
async-trait = "0.1.68"
