[package]
name = "localdev"
version = "0.1.0"
edition = "2021"

[dependencies]
registry-app = { path = "../registry/app" }
interactor = { path = "../interactor" }
strategy-engine = { path = "../strategy-engine" }
storage = { path = "../storage" }
simulator = { path = "../simulator" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.2"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
config = { verion = "0.13.3", features = ["yaml"] }
once_cell = "1.17.1"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
