[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
domain-model = { path = "../libs/domain-model", features = ["synapse"] }
synapse = { path = "../libs/synapse" }
strategy-engine-client = { path = "../clients/strategy-engine-client" }
storage-client = { path = "../clients/storage-client" }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
