[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
domain-model = { path = "../domain-model", features = ["synapse"] }
synapse = { path = "../synapse" }
strategy-engine-client = { path = "../clients/strategy-engine-client" }
storage-client = { path = "../clients/storage-client" }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
uuid = { version = "1.3.2", features = ["v4"] }
chrono = "0.4.24"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
config = { verion = "0.13.3", features = ["yaml"] }
axum = "0.6.18"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
once_cell = "1.17.1"
