[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
registry-app = { path = "../registry/app" }
interactor = { path = "../interactor" }
engine = { path = "../engine" }
storage = { path = "../storage" }
simulator = { path = "../simulator" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
