[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
domain-model = { path = "../libs/domain-model", features = ["synapse"] }
synapse = { path = "../libs/synapse" }
interactor-client = { path = "../clients/interactor-client" }
rdkafka = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-inline-default = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
