[package]
name = "strategy-engine"
version.workspace = true
edition.workspace = true

[dependencies]
synapse = { path = "../synapse" }
domain-model = { path = "../domain-model", features = ["synapse"] }
storage-client = { path = "../clients/storage-client" }
indicators-api = { path = "../indicators-api" }
strategy-api = { path = "../strategy-api" }
registry-rest-client = { path = "../registry/rest-client" }
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
uuid = { version = "1.3.2", features = ["v4"] }
chrono = "0.4.24"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"] }
once_cell = "1.17.1"
axum = "0.6.18"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tower = "0.4.13"
config = { verion = "0.13.3", features = ["yaml"] }
nanoid = "0.4.0"
anyhow = "1.0.71"
async-trait = "0.1.68"
plugin-loader = { path = "../plugin-loader" }
