[package]
name = "synapse"
version.workspace = true
edition.workspace = true

[dependencies]
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
uuid = { version = "1.3.2", features = ["v4"] }
chrono = "0.4.24"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"] }
once_cell = "1.17.1"
