[package]
name = "simulator-client"
version = "0.1.0"
edition = "2021"

[dependencies]
domain-model = { path = "../../libs/domain-model" }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
