[package]
name = "eac"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
serde_urlencoded = { workspace = true }
http = { workspace = true }
ring = { workspace = true }
fehler = { workspace = true }
derive_builder = { workspace = true }
hyper = { workspace = true }

tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tokio-native-tls = "0.3"
async-broadcast = "0.5.1"

[dev-dependencies]
tracing-subscriber = { workspace = true }
