[package]
name = "eac"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
serde_urlencoded = { workspace = true }
http = { workspace = true }
ring = { workspace = true }
fehler = { workspace = true }
derive_builder = { workspace = true }
hyper = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-native-tls = { workspace = true }
async-broadcast = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
