[package]
name = "indicators"
version.workspace = true
edition.workspace = true

[dependencies]
domain-model = { workspace = true }
storage-core-api = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ta = { workspace = true }
yata = { workspace = true }
