[package]
name = "strategy-api"
version.workspace = true
edition.workspace = true

[dependencies]
domain-model = { workspace = true }
indicators-api = { workspace = true }
storage-rest-client = { workspace = true }
async-trait = { workspace = true }
nanoid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
