[package]
name = "synapse"
version.workspace = true
edition.workspace = true

[dependencies]
rdkafka = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
