[package]
name = "synapse"
version.workspace = true
edition.workspace = true

[dependencies]
rdkafka = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
