[package]
name = "test-strategy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strategy-api = { path = "../../strategy-api" }
domain-model = { path = "../../domain-model" }
async-trait = "0.1.68"
uuid = { version = "1.3.2", features = ["v4"] }
chrono = "0.4.24"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
tracing = "0.1.37"
