[package]
name = "engine-app"
version.workspace = true
edition.workspace = true

[dependencies]
engine-core = { workspace = true }
engine-rest-api = { workspace = true }
synapse = { workspace = true }
domain-model = { workspace = true }
storage-rest-client = { workspace = true }
indicators-api = { workspace = true }
strategy-api = { workspace = true }
registry-rest-client = { workspace = true }
plugin-loader = { workspace = true }
rdkafka = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
config = { workspace = true }
nanoid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
