[package]
name = "engine-app"
version.workspace = true
edition.workspace = true

[dependencies]
engine-config = { workspace = true }
engine-core = { workspace = true }
engine-rest-api-server = { workspace = true }
interactor-rest-client = { workspace = true }
domain-model = { workspace = true }
storage-rest-client = { workspace = true }
registry-rest-client = { workspace = true }
plugin-loader = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
