[package]
name = "engine-core"
version.workspace = true
edition.workspace = true

[dependencies]
engine-config = { workspace = true }
engine-core-api = { workspace = true }
registry-core-api = { workspace = true }
interactor-core-api = { workspace = true }
storage-core-api = { workspace = true }
domain-model = { workspace = true }
storage-rest-client = { workspace = true }
plugin-api = { workspace = true }
registry-rest-client = { workspace = true }
plugin-loader = { workspace = true }
engine-plugin-internals = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
