[package]
name = "interactor-app"
version.workspace = true
edition.workspace = true

[dependencies]
interactor-config = { workspace = true }
interactor-core = { workspace = true }
interactor-rest-api-server = { workspace = true }
domain-model = { workspace = true }
eac = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-inline-default = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
