[package]
name = "interactor-app"
version.workspace = true
edition.workspace = true

[dependencies]
interactor-config = { workspace = true }
interactor-core = { workspace = true }
interactor-rest-api-server = { workspace = true }
interactor-inmemory-persistence = { workspace = true }
storage-rest-client = { workspace = true }
engine-rest-client = { workspace = true }
interactor-exchange-api = { workspace = true }
interactor-okx-exchange = { workspace = true}
domain-model = { workspace = true }
eac = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-inline-default = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
