[package]
name = "interactor-core"
version.workspace = true
edition.workspace = true

[dependencies]
interactor-config = { workspace = true }
domain-model = { workspace = true }
eac = { workspace = true }
synapse = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-inline-default = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
