[package]
name = "interactor-core"
version.workspace = true
edition.workspace = true

[dependencies]
interactor-config = { workspace = true }
interactor-core-api = { workspace = true }
interactor-persistence-api = { workspace = true }
storage-core-api = { workspace = true }
domain-model = { workspace = true }
engine-core-api = { workspace = true }
eac = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-inline-default = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
anyhow = { worksapce = true }
