[package]
name = "registry-app"
version = "0.1.0"
edition = "2021"

[dependencies]
registry-core = { path = "../core" }
registry-rest-api = { path = "../rest-api" }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum = { version = "0.6.18", features = ["macros", "multipart"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
config = { verion = "0.13.3", features = ["yaml"] }
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
once_cell = "1.17.1"
uuid = { version = "1.3.2", features = ["v4"] }
